<resources>
    <string name="app_name">Inventoried</string>

    <string name="welcome">¡Bienvenido a inventoried!</string>

    <string name="name">Nombre</string>
    <string name="amount">Cantidad</string>
    <string name="price">Precio</string>
    <string name="brand">Marca</string>
    <string name="type">Tipo</string>
    <string name="add">Añadir</string>
    <string name="cancel">Cancelar</string>
    <string name="confirm">Confirmar</string>
    <string name="erase">Eliminar</string>
    <string name="product">Producto</string>
    <string name="details">Detalles</string>
    <string name="date">Fecha</string>

    <string name="home_toolbar_settings">Configuracion</string>
    <string name="home_toolbar_movements">Historial de movimientos</string>

    <string name="movement_type_add">Añadir</string>
    <string name="movement_type_remove">Eliminar</string>
    <string name="movement_type_change_name">Cambiar Nombre</string>
    <string name="movement_type_change_price">Cambiar Precio</string>
    <string name="movement_type_change_amount">Cambiar Cantidad</string>
    <string name="movement_type_change_brand">Cambiar Marca</string>
    <string name="movement_type_change_type">Cambiar Tipo</string>

    <string name="product_type_vegetables">Vegetales</string>
    <string name="product_type_beverages">Bebestibles</string>
    <string name="product_type_fruits">Frutas</string>
    <string name="product_type_hygiene">Higiene</string>
    <string name="product_type_office">Oficina</string>
    <string name="product_type_others">Otros</string>

    <string name="inventory_name">Inventario</string>
    <string name="stores_name">Lista de tiendas</string>
    <string name="shopping_name">Lista de compras</string>

    <string name="product_add">¡Añade un nuevo producto!</string>
    <string name="product_edit">¡Edita tu producto!</string>
    <string name="store_add">¡Añade una nueva tienda!</string>
    <string name="store_edit">¡Edita tu tienda!</string>

    <string name="logreg_login">Iniciar Sesion</string>
    <string name="logreg_register">Registrarse</string>
    <string name="logreg_back">Volver</string>
    <string name="logreg_reg_tittle">Registrate</string>
    <string name="logreg_hint_username">Usuario</string>
    <string name="logreg_hint_pasword">Contraseña</string>
    <string name="logreg_hint_newusername">Nuevo Usuario</string>
    <string name="logreg_hint_newpassword">Nueva Contraseña</string>

    <string name="addedit_add">Añadir</string>
    <string name="addedit_cancel">Cancelar</string>
    <string name="addedit_confirm">Confirmar</string>
    <string name="addedit_erase">Eliminar</string>
    <string name="addedit_hint_name">Nombre</string>
    <string name="addedit_hint_description">Descripción</string>
    <string name="addedit_hint_amount">Cantidad</string>
    <string name="addedit_hint_price">Precio</string>
    <string name="addedit_hint_brand">Marca</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string name="setting_title">Opciones</string>
    <string name="setting_user_title">Tu nombre</string>
    <string name="setting_default_user">Usuario</string>
    <string name="setting_intro_question">¿Reproducir intro?</string>

    <string name="add_product_error">¡Alguno de los campos tiene valores incorrectos!</string>
    <string name="movement_title">Historial de movimientos</string>
    <string name="none">Ninguno</string>
</resources>