<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/alabaster"
    tools:context=".AddEditProductsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/addProductTitle"
            android:layout_width="267dp"
            android:layout_height="43dp"
            android:fontFamily="casual"
            android:text="@string/product_add"
            android:textAlignment="center"
            android:textColor="@color/onyx"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="66dp" />

        <EditText
            android:id="@+id/addProductNameInput"
            android:layout_width="346dp"
            android:layout_height="56dp"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:fontFamily="casual"
            android:hint="@string/name"
            android:inputType="text"
            android:textColor="@color/onyx" />

        <EditText
            android:id="@+id/addProductAmountInput"
            android:layout_width="346dp"
            android:layout_height="56dp"
            android:ems="10"
            android:fontFamily="casual"
            android:hint="@string/amount"
            android:inputType="number"
            android:textColor="@color/onyx" />

        <EditText
            android:id="@+id/addProductPriceInput"
            android:layout_width="346dp"
            android:layout_height="56dp"
            android:ems="10"
            android:fontFamily="casual"
            android:hint="@string/price"
            android:inputType="number"
            android:textColor="@color/onyx" />

        <EditText
            android:id="@+id/addProductBrandInput"
            android:layout_width="346dp"
            android:layout_height="56dp"
            android:ems="10"
            android:fontFamily="casual"
            android:hint="@string/brand"
            android:inputType="text"
            android:textColor="@color/onyx" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <Spinner
            android:id="@+id/addProductType"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="70dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/addProductConfirmButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/add"
                android:textColor="@color/onyx"
                android:textStyle="bold" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/addProductCancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/cancel"
                android:textColor="@color/onyx"
                android:textStyle="bold" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>