<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegActivity">

    <TextView
        android:id="@+id/regTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="casual"
        android:text="@string/logreg_reg_tittle"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/regUserInput"
        android:layout_width="237dp"
        android:layout_height="59dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:fontFamily="casual"
        android:hint="@string/logreg_hint_newusername"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regTitle" />

    <EditText
        android:id="@+id/regPassInput"
        android:layout_width="237dp"
        android:layout_height="59dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:fontFamily="casual"
        android:hint="@string/logreg_hint_newpassword"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regUserInput" />

    <Button
        android:id="@+id/regRegButton"
        android:layout_width="197dp"
        android:layout_height="58dp"
        android:layout_marginTop="44dp"
        android:fontFamily="casual"
        android:text="@string/logreg_register"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regPassInput" />

    <Button
        android:id="@+id/regBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:fontFamily="casual"
        android:text="@string/logreg_back"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regRegButton"
        app:layout_constraintVertical_bias="0.404" />
</androidx.constraintlayout.widget.ConstraintLayout>